docs: fix logo width on mobile

--- a/website/src/main.css
+++ b/website/src/main.css
@@ -51,4 +51,5 @@ html[data-theme='dark'] {
 
 .hero-logo {
   height: 350px;
+  max-width: 100vw;
 }
